--- a/templates/_partial-job/push-table.twig
+++ b/templates/_partial-job/push-table.twig
@@ -7,8 +7,8 @@
             <th>Status</th>
             <th>Env → Server</th>
             <th>Reference</th>
-            <th>Initiator</th>
-            <th>Date</th>
+            <th>User</th>
+            <th>Time</th>
         </tr>
     </thead>
     <tbody>
