--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -95,7 +95,7 @@
                 {% endif %}
             </dd>
 
-            <dt class="split__title">Initiator</dt>
+            <dt class="split__title">User</dt>
             <dd>
                 {% if push.user %}
                     <a href="{{ urlFor('user', {'user': push.user.id}) }}">{{ push.user.name }}</a>
