--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -55,7 +55,7 @@
                 <th class="table-priority-45">Reference</th>
                 <th class="table-priority-50">Commit</th>
                 <th>Pushed</th>
-                <th>Initiator</th>
+                <th>User</th>
                 {% if canRollback %}
                     <th class="t10"></th>
                 {% endif %}
