--- a/templates/queue.history.twig
+++ b/templates/queue.history.twig
@@ -24,7 +24,7 @@
                 <th>Application</th>
                 <th>Env → Server</th>
                 <th>Reference</th>
-                <th class="table-priority-55">Initiator</th>
+                <th class="table-priority-55">User</th>
                 <th class="table-priority-50">Time</th>
             </tr>
         </thead>
