--- a/templates/_partial-job/build-table.twig
+++ b/templates/_partial-job/build-table.twig
@@ -7,8 +7,8 @@
             <th>Status</th>
             <th>Env</th>
             <th>Reference</th>
-            <th>Initiator</th>
-            <th>Date</th>
+            <th>User</th>
+            <th>Time</th>
             <th class="t10"></th>
         </tr>
     </thead>
