--- a/templates/_partial-job/pending-table.twig
+++ b/templates/_partial-job/pending-table.twig
@@ -8,7 +8,7 @@
             <th>Status</th>
             <th>Env → Server</th>
             <th>Reference</th>
-            <th>Initiator</th>
+            <th>User</th>
         </tr>
     </thead>
     <tbody>
