--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -61,12 +61,12 @@
 
         <div class="dash-box">
               <h2 class="trailer">Your Recent Builds</h2>
-              {% include '_partial-job/build-box.twig' with {'builds': builds, 'initiator': false} %}
+              {% include '_partial-job/build-box.twig' with {'builds': builds} %}
         </div>
 
         <div class="dash-box">
               <h2 class="trailer">Your Recent Pushes</h2>
-              {% include '_partial-job/push-box.twig' with {'pushes': pushes, 'initiator': false} %}
+              {% include '_partial-job/push-box.twig' with {'pushes': pushes} %}
         </div>
     </div>
 
