--- a/templates/help/deployment.twig
+++ b/templates/help/deployment.twig
@@ -4,7 +4,7 @@
 {% set page_title = 'Deployment Help' %}
 
 {% block content %}
-    <h1>Deployment scripting guide for engineers</h1>
+    <h1>Help - <strong>Deployment Guide for engineers</strong></h1>
 
     <p><a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a></p>
 
