--- a/templates/kraken/applications.twig
+++ b/templates/kraken/applications.twig
@@ -8,7 +8,8 @@
     <h1>{{ page_title }}</h1>
 
     <p>
-        lorem ipsum blah blah
+        <strong>Kraken</strong> is a system for storing <b>run-time</b> configuration. Run-time configuration consists of properties or settings
+        that change depending on environments, or need to be changed without requiring a code deployment.
     </p>
 
     <p>See the <a href="{{ urlFor('kraken.help') }}">Help page</a> for more.</p>
