This took far too long to debug

--- a/templates/kraken/help.twig
+++ b/templates/kraken/help.twig
@@ -146,10 +146,10 @@
 
 {% block application_usage %}
 
-    <h3 id="#sanity-checking">{{ macros.status_icon('How do applications define what values they are expecting, and their type?') }}</h3>
+    <h3 id="sanity-checking">{{ macros.status_icon('How do applications define what values they are expecting, and their type?') }}</h3>
     <p>tbd</p>
 
-    <h3 id="#system-requirements">{{ macros.status_icon('What is required to load configuration into my application?') }}</h3>
+    <h3 id="system-requirements">{{ macros.status_icon('What is required to load configuration into my application?') }}</h3>
     <p>tbd</p>
 
 {% endblock %}
