Fix padding on kraken logo

--- a/sass/app/_kraken.scss
+++ b/sass/app/_kraken.scss
@@ -32,7 +32,7 @@ $kraken-red-dark: rgb(145, 20, 22);
         display: block;
         font-weight: bold;
 
-        padding: .15em .25em 0 .25em;
+        padding: 0 .25em;
         margin: 2px;
     }
 
