--- a/templates/kraken/help.twig
+++ b/templates/kraken/help.twig
@@ -61,10 +61,10 @@
 
     <h3 id="what-is-this">{{ macros.status_icon('I am 12 years old and what is this?') }}</h3>
     <p>
-        <strong>Kraken</strong> is a system for storing <b>run-time</b> configuration. Run-time configuration consists of properties or settings
+        <strong>Kraken</strong> is a system for storing <b>runtime</b> configuration. Runtime configuration consists of properties or settings
         that change depending on environments, or need to be changed without requiring a code deployment.
     </p>
-    <p class="mbn"><b>Here is a sample of what may be stored as run-time configuration:</b></p>
+    <p class="mbn"><b>Here is a sample of what may be stored as runtime configuration:</b></p>
 
     <ul class="list--bullet">
         <li>Host names of services</li>
