Fix server removal warning not displayed

--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -35,7 +35,7 @@
         <p>There are no environments.</p>
     {% endif %}
 
-    <ul class="button-list">
+    <ul class="button-list button-list--half">
         <li><a class="btn" href="{{ urlFor('repositories') }}">Applications</a></li>
 
         {% if isUserSuper(currentUser) %}
