--- a/templates/server/servers.twig
+++ b/templates/server/servers.twig
@@ -3,7 +3,7 @@
 {% set page_title = "Servers" %}
 
 {% block content %}
-    <h2>Servers</h2>
+    <h1>{{ page_title }}</h1>
 
     <table class="table--spacing-medium table--top-aligned" data-tablesaw-mode="stack">
         <thead>
