Make encrypted properties striped

--- a/templates/application/encrypted/encrypted.properties.twig
+++ b/templates/application/encrypted/encrypted.properties.twig
@@ -8,7 +8,7 @@
     <h1>Encrypted Properties - <strong>{{ application.name }}</strong></h1>
 
     {% if encrypted %}
-        <table class="table--spacing-medium" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Property Name</th>
@@ -22,7 +22,7 @@
             {% for property in encrypted %}
                 <tr>
                     <td>
-                        <code>{{ property.name|upper }}</code>
+                        <code class="code_clear">{{ property.name|upper }}</code>
                     </td>
                     <td>
                         {% if property.environment %}
