--- a/sass/patterns/_buttons.scss
+++ b/sass/patterns/_buttons.scss
@@ -53,7 +53,8 @@ $btn-color-transparent: rgba(255, 255, 255, .1);
 
 // Basic button modifiers
 .btn--tiny {
-    font-size: ms(-2);
+    font-size: 90%;
+
     margin: 0;
     margin-top: -5px;
     padding: ms(-10) ms(-6);
